--- a/PIWatcher.dproj
+++ b/PIWatcher.dproj
@@ -109,6 +109,7 @@
         <DCCReference Include="uWatcherGlobals.pas"/>
         <DCCReference Include="uMarketOrders.pas"/>
         <DCCReference Include="ushared.pas"/>
+        <DCCReference Include="uMarketHistory.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
