--- a/PIWatcher.dproj
+++ b/PIWatcher.dproj
@@ -110,6 +110,11 @@
         <DCCReference Include="uMarketOrders.pas"/>
         <DCCReference Include="ushared.pas"/>
         <DCCReference Include="uMarketHistory.pas"/>
+        <DCCReference Include="uLoadEveRefData.pas"/>
+        <DCCReference Include="fSearch.pas">
+            <Form>frmSearch</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
