Added evestatic, a collection of pre-loaded, static eve data.

--- a/PIWatcher.dproj
+++ b/PIWatcher.dproj
@@ -94,10 +94,6 @@
             <FormType>dfm</FormType>
             <DesignClass>TDataModule</DesignClass>
         </DCCReference>
-        <DCCReference Include="fImportData.pas">
-            <Form>Form2</Form>
-            <FormType>dfm</FormType>
-        </DCCReference>
         <DCCReference Include="fViewData.pas">
             <Form>frmViewData</Form>
             <FormType>dfm</FormType>
@@ -110,11 +106,12 @@
         <DCCReference Include="uMarketOrders.pas"/>
         <DCCReference Include="ushared.pas"/>
         <DCCReference Include="uMarketHistory.pas"/>
-        <DCCReference Include="uLoadEveRefData.pas"/>
         <DCCReference Include="fSearch.pas">
             <Form>frmSearch</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="dEveStatic.pas"/>
+        <DCCReference Include="fEveStatic.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
