--- a/PIWatcher.dproj
+++ b/PIWatcher.dproj
@@ -113,6 +113,7 @@
         <DCCReference Include="fEveStatic.pas"/>
         <DCCReference Include="dEveStatic.pas"/>
         <DCCReference Include="uMarketGroups.pas"/>
+        <DCCReference Include="uClientDataSetUtils.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
