added meta level data and an onscreen filter for meta group and meta level.

--- a/PIWatcher.dproj
+++ b/PIWatcher.dproj
@@ -116,6 +116,10 @@
         <DCCReference Include="dEveStatic.pas"/>
         <DCCReference Include="uMarketGroups.pas"/>
         <DCCReference Include="uClientDataSetUtils.pas"/>
+        <DCCReference Include="fMetaFilter.pas">
+            <Form>frmMetafilter</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
